--- a/src/client/pages/student/ApplicationForm.module.css
+++ b/src/client/pages/student/ApplicationForm.module.css
@@ -339,6 +339,17 @@
   flex-direction: column;
 }
 
+.fullWidth {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .fullWidth {
+    grid-column: span 2;
+  }
+}
+
 .infoDisplayBox {
   padding: 0.75rem 1rem;
   border-radius: 1rem;
